examples/test/testpolicy17541.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17541
  namespace: namespace106
spec:
  podSelector:
    matchLabels:
      key5: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value15
      podSelector:
        matchLabels:
          key14: value41
          key42: value35
          key8: value30
